# cleanform

./: .gitignore  Procfile  README.md  index.html  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: frontend.yaml
app/: asgi.py  db_routers.py  middlewares.py  urls.py  wsgi.py
app/migrations/: 0001_added_user_model.py  0002_added_form_model.py  0003_added_name_element.py  0004_added_address_element_model.py
app/models/: __init__.py  base.py  user.py
app/settings/: base.py  development.py
cleanform/: apps.py  asgi.py  celery.py  urls.py  wsgi.py
cleanform/api/: tasks.py  views.py
cleanform/migrations/: 0001_added_user_model.py  0002_added_form_model.py  0003_added_element_model.py  0004_rename_form_order_to_elements.py  0005_allow_null_values_to_element_properties_and_layouts.py  0006_added_submission_model.py  0007_change_default_base_field_of_form_elements.py  0008_element_validations_alter_element_type.py  0009_added_form_view_model.py  0010_added_email_service_model.py  0011_added_autoresponder_configuration_to_forms.py  0012_removed_responder_settings_from_form_model.py  0013_added_responder_model.py  0014_added_responder_log_model.py
cleanform/models/: __init__.py  element.py  email_service.py  form.py  form_view.py  responder.py  responder_log.py  submission.py  user.py
cleanform/settings/: base.py  development.py  production.py
src/: App.vue  api.js  main.js
src/components/: Navbar.vue
src/constants/: elements.js
src/router/: index.js
tzapp/: apps.py  asgi.py  urls.py  wsgi.py
(+54 files in other folders)
